class_name PioneerScreen
extends MarginContainer

@onready var pioneer_text = $ScreenContainer/PioneerText

@onready var pioneer_pic = $ScreenContainer/HBoxContainer/PioneerPic
@onready var stats = $ScreenContainer/HBoxContainer/StatsScreen

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
